<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/text_title_transcript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transcript_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_transcript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transcript"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/text_title_transcript" />

    <TextView
        android:id="@+id/text_title_firebase_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/firebase_link_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_transcript" />

    <TextView
        android:id="@+id/text_firebase_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/firebase_audio_link"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/text_title_firebase_link" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>