<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".bluetooth.Activity_BTLE_Services">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_medium"
            android:text="Name"
            android:id="@+id/tv_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_small"
            android:text="Address"
            android:id="@+id/tv_address"/>

        <Button
            android:id="@+id/btn_storeValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_values"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:fillViewport="true"
            android:id="@+id/scrollView">

            <ExpandableListView
                android:id="@+id/lv_expandable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:groupIndicator="@null" />

        </ScrollView>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/button_speech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speech_button"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_pitch_roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pitch_roll"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/button_clear_speech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clear Speech"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_clear_pitch_roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clear Pitch/Roll"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>



</RelativeLayout>
